# robotics-project-course

./: .gitignore  README.md  cheatsheet.txt  frames_2025-02-23_12.22.51.gv  frames_2025-02-23_12.27.59.gv  frames_2025-02-23_14.14.43.gv  frames_2025-02-23_14.34.13.gv  map_file.txt
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/arm_controller/lib/arm_controller/: arm_controller
install/arm_controller/share/arm_controller/: package.sh  package.xml
install/arm_servos_pubs_subs/share/arm_servos_pubs_subs/: package.sh  package.xml
install/behavior_tree/lib/behavior_tree/: goCollect_bhv  pick_bt  pick_bt_node
install/behavior_tree/share/behavior_tree/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/detection/lib/detection/: classifier_node  clustering_node
install/detection/share/detection/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/drive_base_msgs/share/drive_base_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.sh  package.xml
install/handle_objects/lib/handle_objects/: ik_solver  lift_node  pick_node  pick_objects  place_node
install/handle_objects/share/handle_objects/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/icp_cpp/lib/icp_cpp/: icp_node
install/icp_cpp/share/icp_cpp/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/joystick_teleop/lib/joystick_teleop/: teleop  twist2duty
install/joystick_teleop/share/joystick_teleop/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/localization/lib/localization/: ekf
install/localization/share/localization/: package.sh  package.xml
install/map_file/lib/map_file/: map_file
install/map_file/share/map_file/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/mapping/lib/mapping/: mapping  occupancy_grid
install/mapping/share/mapping/: package.sh  package.xml
install/micro_ros_agent/lib/: libmicroxrcedds_agent.so.2.4.3
install/micro_ros_agent/lib/micro_ros_agent/: micro_ros_agent
install/micro_ros_agent/share/micro_ros_agent/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/micro_ros_msgs/share/micro_ros_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/micro_ros_setup/lib/micro_ros_setup/: build_agent.sh  build_firmware.sh  clean_env.sh  component  configure_firmware.sh  create_agent_ws.sh  create_firmware_ws.sh  create_ws.sh  flash_firmware.sh  yaml_filter.py
install/micro_ros_setup/share/micro_ros_setup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/odometry/share/odometry/: package.sh  package.xml
install/path_planner/lib/path_planner/: path_execution  path_planner  point_generator  point_publisher_test
install/path_planner/share/path_planner/: package.sh  package.xml
install/py_trees/share/py_trees/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/py_trees_ros_viewer/share/py_trees_ros_viewer/: package.sh  package.xml
install/robp_boot_camp_launch/share/robp_boot_camp_launch/: package.sh  package.xml
install/robp_interfaces/share/robp_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  (+3 more)
log/: latest_build
robp_ws/: .gitignore  frames_2025-02-03_13.40.16.gv  map_file.txt
robp_ws/bag/rosbag2_2025_02_03-15_08_16/: metadata.yaml
robp_ws/path_planner/: setup.py
robp_ws/rosbag2_2025_02_28-14_32_52/: metadata.yaml
robp_ws/src/arm_cam/: CMakeLists.txt  package.xml
robp_ws/src/arm_cam/include/: box_segmentation.h  object_segmentation.h
robp_ws/src/arm_cam/src/: box_segmentation.cpp  box_segmentation_node.cpp  object_segmentation.cpp  object_segmentation_node.cpp
robp_ws/src/arm_controller/: package.xml  setup.py
robp_ws/src/behavior_tree/: README.md  map_1.tsv  map_file.txt  package.xml  setup.py
robp_ws/src/detection/: CMakeLists.txt  README  README.md  package.xml
robp_ws/src/detection/detection/: detection.py
robp_ws/src/detection/include/: classifier.h  classifier.hpp  clustering.h  clustering.hpp  clustering_collection.h
robp_ws/src/detection/src/: classifier.cpp  classifier_node.cpp  clustering.cpp  clustering_collection.cpp  clustering_collection_node.cpp  clustering_node.cpp
robp_ws/src/detection_bt/: package.xml  setup.cfg  setup.py
robp_ws/src/handle_objects/: Cheatsheet_pick  README.md  README.md.md  package.xml  setup.cfg  setup.py
robp_ws/src/icp_cpp/: CMakeLists.txt  README.md  package.xml
robp_ws/src/icp_cpp/include/: icp.hpp
robp_ws/src/icp_cpp/src/: icp_node.cpp
robp_ws/src/install/: local_setup.sh  setup.sh
robp_ws/src/joystick_teleop/: package.xml  setup.py
robp_ws/src/localization/: README.md  package.xml  setup.py
robp_ws/src/localization/localization/: ekf.py  localization_bhv.py  localization_transform.py  stop_static.py
robp_ws/src/log/: latest_build
robp_ws/src/map_file/: README.md  package.xml  setup.cfg  setup.py
robp_ws/src/mapping/: package.xml  setup.py
robp_ws/src/obstacle_on_path/: package.xml  setup.cfg  setup.py
robp_ws/src/obstacle_on_path/obstacle_on_path/: obstacle_on_path.py  obstacle_on_path_bhv.py
robp_ws/src/odometry/: package.xml
robp_ws/src/path_planner/: package.xml  setup.py
robp_ws/src/pick_objects/: package.xml  setup.cfg  setup.py
robp_ws/src/robp_robot/robp_phidgets/: CMakeLists.txt
robp_ws/src/robp_robot/robp_phidgets/include/robp_phidgets/: encoder.hpp  encoders.hpp  motor.hpp  motors.hpp  spatial.hpp  temperature.hpp
robp_ws/src/robp_robot/robp_phidgets/robp_phidgets_motors/src/: motors.cpp
robp_ws/src/robp_robot/robp_phidgets/src/: encoder.cpp  encoders.cpp  motor.cpp  motors.cpp  phidgets.cpp  spatial.cpp  temperature.cpp
robp_ws/src/xlaunch/: path_planner_launch.py
(+569 files in other folders)
