<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
<name>obstacle_on_path</name>
<version>0.0.0</version>
<description>TODO: Package description</description>
<maintainer email="group3-robot@todo.todo">group3-robot</maintainer>
<license>MIT</license>

  <depend>python3-numpy</depend>
  <depend>rclpy</depend>
  <depend>nav_msgs.msg</depend>
  <depend>py_trees</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
